...
                color = colors.textPrimary
            )
        },
        text = {
            Column(
                verticalArrangement = Arrangement.spacedBy(12.dp),
                modifier = modifier.testTag("password_category_dialog")
            ) {
                when (state) {
                    PasswordCategorySelectionUiState.Loading -> {
                        Text(
                            text = stringResource(R.string.new_password_category_dialog_loading),
                            color = colors.textSecondary
...
